[package]
name = "windows-syscall"
version = "0.0.6"
edition = "2021"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/windows-syscall"
homepage = "https://github.com/oberrich/windows-syscall"
description = "Windows inline syscalls for Rust"

[features]
default = ["windows-syscall-typesafe"]
windows-syscall-typesafe = []
windows-syscall-use-linked = []

[lib]
doctest = false

[dependencies]
const-fnv1a-hash = "1.1.0"
once_cell = "1.19.0"
exe = "0.5.6"

[dependencies.phnt]
version = "0.0.17"
features = ["docsrs"]
