[package]
name = "windows-syscall"
version = "0.0.9"
edition = "2021"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/windows-syscall"
homepage = "https://github.com/oberrich/windows-syscall"
description = "Windows inline syscalls for Rust"

[features]
default = ["windows-syscall-typesafe"]
windows-syscall-typesafe = []
windows-syscall-use-linked = []

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[dependencies]
const-fnv1a-hash = "1.1.0"
once_cell = "1.19.0"
exe = "0.5.6"

[dependencies.phnt]
version = "0.0.17"
features = ["docsrs"]
