[package]
name = "windows-syscall"
version = "0.0.15"
edition = "2021"
license = "MIT"
authors = ["oberrich <oberrich.llvm@proton.me>"]
repository = "https://github.com/oberrich/windows-syscall"
homepage = "https://github.com/oberrich/windows-syscall"
description = "Windows inline syscalls for Rust"

[features]
default = ["windows-syscall-typesafe"]
windows-syscall-typesafe = []
windows-syscall-use-linked = []

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]
rustdoc-args = ["--cfg", "docsrs"]
rustc-args = ["--cfg", "docsrs"]

[lib]
doctest = false

[dependencies]
const-fnv1a-hash = "1.1.0"
once_cell = "1.19.0"
exe = "0.5.6"
phnt = { version = "0.0.26"}

